...
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="Xha-8M-DnE"/>
...
                                        <rect key="frame" x="0.0" y="38" width="200" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="76" width="200" height="44"/>
                                        <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signInButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="hEn-Iy-41q"/>
...
                                        <rect key="frame" x="0.0" y="128" width="200" height="44"/>
                                        <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signUpButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="BWI-pT-dfV"/>
...
                                        <rect key="frame" x="0.0" y="76" width="200" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="gM9-Kv-2Jb"/>
...
                                        <rect key="frame" x="0.0" y="114" width="200" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="msJ-sR-XjP"/>
...
                                        <rect key="frame" x="0.0" y="152" width="200" height="44"/>
                                        <color key="backgroundColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="byi-nE-iVe"/>
...
