...
  
  /// Shows a UIAlertController to inform user that his profile data was changed successfully
  private func showUserProfileWasChangedAlert() {
    let alertController = UIAlertController(title: "Success",
                                            message: "Your data has been changed successfully",
                                            preferredStyle: .alert)
    let okAction = UIAlertAction(title: "OK", style: .default) { [weak self] action in
      self?.navigationController?.popViewController(animated: true)
    }
    alertController.addAction(okAction)
    present(alertController, animated: true, completion: nil)
  }

...
