...
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DX6-mv-OWh">
                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nu2-qB-Gas">
                                        <rect key="frame" x="323" y="3" width="44" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showCartButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="44" id="e0u-ZA-gSk"/>
                                        </constraints>
                                        <state key="normal" image="showCart"/>
                                        <connections>
                                            <action selector="showCartButtonWasPressed:" destination="o9M-80-EBd" eventType="touchUpInside" id="8dH-xa-Rgr"/>
...
